# tmux-claude-code-notifier

./: README.md  agent-monitor.sh  backends.conf  cc-monitor.sh  clear.sh  cycle.sh  dashboard.sh  dispatch.sh  doctor.sh  install.sh  jump.sh  lib.sh  notify.sh  popup.sh  restart.sh  scan.sh  status.sh  telegram-bot.sh  telegram-send-py.sh  telegram-send.sh  telegram-setup.sh  telegram.sh  test.sh  uninstall.sh
archive/claude/: restart.sh
archive/telegram/: telegram-setup.sh  telegram.sh
archive/telegram/python/: __main__.py  bot.py  mock.py  send.py  setup.py  tmux.py
archive/telegram/python/tests/: test_message.py
providers/: claude-hook.sh  codex-hook.sh  pi-extension.ts
telegram/: api.py  bot.py  db.py  message.py  mock.py  models.py  parse.py  pyproject.toml  send.py  state.py  tmux.py
telegram/tests/: conftest.py  test_bot.py  test_message.py  test_mock.py  test_parse.py  test_send.py  test_state.py  test_tmux.py
