[project]
name = "claude-notifier-telegram"
version = "0.1.0"
description = "Telegram backend for Claude Code Notifier"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
claude-notifier-telegram = "telegram.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
